create github pages

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/j">website templates</a></section><section class="cid-rCSBNoGE3z mbr-fullscreen mbr-parallax-background" id="header2-1">
+<section class="engine"><a href="https://mobirise.info/x">free css templates</a></section><section class="cid-rCSBNoGE3z mbr-fullscreen mbr-parallax-background" id="header2-1">
 
     
 
@@ -101,7 +101,7 @@
     <div class="container">
         <div class="row justify-content-md-center">
             <div class="col-md-10 align-center">
-                <h1 class="mbr-section-title mbr-bold pb-3 mbr-fonts-style display-1">Avcılar Günlük<br>Kiralık Daire</h1>
+                <h1 class="mbr-section-title mbr-bold pb-3 mbr-fonts-style display-1">Bağcılar Günlük<br>Kiralık Daire</h1>
                 
                 <p class="mbr-text pb-3 mbr-fonts-style display-5">İstanbul en çok gelişen semtlerinden biri olan Bağcılar. Lüks rezidanslarında bulunan ultra lüks döşenmiş günlük kiralık daireleri ile sizlere hizmet sunmaktan memnuniyet duyar.<br>Bağcılar günlük kiralık dairelerde ister tek başınıza, ister eşiniz, ister sevgiliniz, ister de grup olarak, isterseniz de ailenizle konaklamalarınızı yapabilirsiniz<br><br>Merkezi konumdaki dairelerimiz ile tüm ulaşım araçlarına yürüme mesafesinde bulunmaktayız. Bağcılar günlük kiralık daire şartsız koşulsuz sözleşemeye gerek duymadan&nbsp;hemen kiralama hizmeti sunmaktadır.<br><br>Baştan aşağı size ait olacak olan dairenizde istediğiniz süre kadar konaklamanın huzurunu yaşarsınız. <br><br>Bağcılar günlük kiralık daire seçimlerini yaparken oda seçimini yapmanızda mümkün. 1+1 ya da 1+0 daire seçenekleri arasında 4 saatlik, 12 saatlik ya da 24 saatlik olarak dilediğiniz sürelerde konaklama gerçekleştirebilirsiniz.&nbsp;<br></p>
                 <div class="mbr-section-btn"><a class="btn btn-md btn-black display-4" href="https://wa.me/905301763465/?text=Merhaba%20Beylikdüzündeki½20Bo%C5%9F%20odalar%C4%B1n%C4%B1z%20hakk%C4%B1nda%20bilgi%20alabilir%20miyim?">WhatsAPP</a></div>
